--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/BobbieBarker/angular2-jspm-playground#readme",
   "devDependencies": {
     "babel": "^5.8.23",
+    "jspm": "^0.16.10",
     "typescript": "^1.6.2"
   },
   "dependencies": {
