--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
   "homepage": "https://github.com/BobbieBarker/angular2-jspm-playground#readme",
   "devDependencies": {
     "babel": "^5.8.23",
+    "es6-module-loader": "^0.17.8",
     "jspm": "^0.16.10",
+    "karma": "^0.13.10",
     "karma-chrome-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-systemjs": "^0.8.0",
+    "phantomjs": "^1.9.18",
+    "phantomjs-polyfill": "0.0.1",
     "systemjs": "^0.19.3",
     "typescript": "^1.6.2"
   },
